--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -44,3 +44,30 @@
   overflow: hidden;
   flex-direction: column;
 }
+html,
+body {
+  overflow: hidden;
+  margin: 0;
+  min-height: 100vh;
+}
+body {
+  text-align: left;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  color: var(--color-light-blue);
+  background-color: var(--color-dark-green);
+  font-size: var(--font-md);
+  font-family: var(--font-poppins);
+}
+
+.board-container {
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-top: 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* End  */
