--- a/src/components/square/square.scss
+++ b/src/components/square/square.scss
@@ -2,9 +2,9 @@
   font-size: 2rem;
   height: 48px;
   width: 48px;
-  text-align: center;
-  bottom: 2px solid var(--color-light-blue);
-  background: none;
+  text-align:center;
+  border: 1px solid var(--color-light-blue);
+  background:none;
   cursor: pointer;
-  place-items: center;
+  place-items: center;    
 }
